Fix scrollbar always appearing on pres

--- a/sass/base/_code.scss
+++ b/sass/base/_code.scss
@@ -16,7 +16,7 @@ code {
 pre {
     white-space: pre;
     word-wrap: normal;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .code_clear {
